--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "Heltec_ESP32"]
-	path = Heltec/Heltec_ESP32
+	path = Heltec_ESP32
 	url = https://github.com/HelTecAutomation/Heltec_ESP32
-[submodule "WiFi_Kit_series"]
-	path = Heltec/WiFi_Kit_series
-	url = https://github.com/Heltec-Aaron-Lee/WiFi_Kit_series
 [submodule "Heltec/WiFi_Kit_series"]
 	path = Heltec/WiFi_Kit_series
 	url = ssh://gei@queen.lan.hm.xn--8cab.de/volume2/git/Arduino/Aaron_Lee_WiFi_Kit_series
